--- a/css/profile-sideBar.css
+++ b/css/profile-sideBar.css
@@ -180,12 +180,15 @@
 
 .sidebar-toggle {
     position: fixed;
-    top: 1rem;
-    left: 1rem;
+    top: 28rem;
+    left: -0.1rem;
     z-index: 999;
     background-color: #2600bc;
     border: none;
-    border-radius: 8px;
+    border-top-left-radius: 1px;
+    border-bottom-left-radius: 1px;
+    border-top-right-radius: 8px;
+    border-bottom-right-radius: 8px;
     padding: 8px;
     cursor: pointer;
     transition: transform 0.3s ease;
