--- a/css/profile-sideBar.css
+++ b/css/profile-sideBar.css
@@ -180,8 +180,8 @@
 
 .sidebar-toggle {
     position: fixed;
-    top: 28rem;
-    left: -0.1rem;
+    top: 0.5rem;
+    left: -0.5rem;
     z-index: 999;
     background-color: #2600bc;
     border: none;
@@ -189,7 +189,7 @@
     border-bottom-left-radius: 1px;
     border-top-right-radius: 8px;
     border-bottom-right-radius: 8px;
-    padding: 8px;
+    padding: 8px 3px 8px 8px;
     cursor: pointer;
     transition: transform 0.3s ease;
 }
