--- a/css/product-card-style.css
+++ b/css/product-card-style.css
@@ -109,6 +109,21 @@
     transition: 0.3s;
 }
 
+.card-picture{
+    position: relative;
+}
+
+.product-stock{
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    border: none;
+    background-color: #2600bc;
+    color: white;
+    padding: 3px 10px;
+    border-radius: 10px;
+}
+
 /* Responsive Design */
 @media (max-width: 1275px){
     .card-box, .card-box2{
