--- a/css/page/product-details.css
+++ b/css/page/product-details.css
@@ -203,8 +203,9 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    margin-top: 20px;
+    margin-top: 10px;
     font-size: 16px;
+    margin-left: 250px;
     color: var(--primary);
     opacity: 0;
     transition: all 0.3s ease;
