--- a/css/page/toPay.css
+++ b/css/page/toPay.css
@@ -145,6 +145,12 @@
     padding: 20px 15px;
 }
 
+.item-img{
+    width: 200px;
+    height: 200px;
+    border-radius: 8px;
+}
+
 .image-name{
     display: grid;
     grid-template-columns: 1fr;
