--- a/css/page/toReceive.css
+++ b/css/page/toReceive.css
@@ -167,6 +167,12 @@
     margin-bottom: 12px;
 }
 
+.item-img{
+    width: 100px;
+    height: 100px;
+    border-radius: 8px;
+}
+
 .item-naming{
     display: -webkit-box;
     -webkit-line-clamp: 2;
