--- a/css/page/toPay.css
+++ b/css/page/toPay.css
@@ -145,16 +145,19 @@
     padding: 20px 15px;
 }
 
-.item-img{
+.image-name{
+    display: grid;
+    grid-template-columns: 1fr;
+    margin-bottom: 12px;
     width: 200px;
     height: 200px;
     border-radius: 8px;
 }
 
-.image-name{
-    display: grid;
-    grid-template-columns: 1fr;
-    margin-bottom: 12px;
+.item-img{
+    width: 100px;
+    height: 100px;
+    border-radius: 8px;
 }
 
 .item-naming{
