--- a/css/page/toReceive.css
+++ b/css/page/toReceive.css
@@ -165,6 +165,9 @@
     display: grid;
     grid-template-columns: 1fr;
     margin-bottom: 12px;
+    width: 200px;
+    height: 200px;
+    border-radius: 8px;
 }
 
 .item-img{
